--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -14,7 +14,7 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
         driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-        url: jdbc:mysql://localhost:3306/cloudDB01              # 数据库名称
+        url: jdbc:mysql://localhost:3306/cloudDB01?useUnicode=true&characterEncoding=utf8&autoReconnect=true
         username: root
         password: xujinlei7882273
         dbcp2:
@@ -48,7 +48,7 @@ spring:
     datasource:
         type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
         driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-        url: jdbc:mysql://localhost:3306/cloudDB01              # 数据库名称
+        url: jdbc:mysql://localhost:3306/cloudDB02?useUnicode=true&characterEncoding=utf8&autoReconnect=true
         username: root
         password: xujinlei7882273
         dbcp2:
